# Sem2-Lab3-Matrixes

./: .gitignore  CMakeLists.txt  LINAL_report.md  README.md
src/: CMakeLists.txt  main.cpp
src/algebra/: diagonal_matrix.hpp  diagonal_matrix.tpp  imatrix.hpp  matrix.hpp  matrix.tpp  matrix_vector_io.hpp  sparse_matrix.hpp  sparse_matrix.tpp  square_matrix.hpp  square_matrix.tpp  system_of_equations.hpp  system_of_equations.tpp  triangular_matrix.hpp  triangular_matrix.tpp  vector.hpp  vector.tpp
src/lab2/interfaces/: icollection.hpp  ienumerable.hpp  ienumerator.hpp  isequence_builder.hpp  sequence.hpp  sequence.tpp
src/lab2/memory/: dynamic_array.hpp  dynamic_array.tpp
src/lab2/sequences/: array_sequence.hpp  array_sequence.tpp  immutable_array_sequence.hpp  mutable_array_sequence.hpp
src/lab2/types/: exceptions.hpp  option.hpp
src/types/: complex.hpp  math.hpp
tests/: CMakeLists.txt  test_complex.cpp  test_diagonal_matrix.cpp  test_matrix.cpp  test_sparse_matrix.cpp  test_square_matrix.cpp  test_system_of_equations.cpp  test_triangular_matrix.cpp  test_vector.cpp
